@@ -3,7 +3,7 @@
 # This file defines the default bindings for Tk panedwindow widgets and
 # provides procedures that help in implementing those bindings.
 #
-# RCS: @(#) $Id: panedwindow.tcl,v 1.7 2003/07/19 01:24:02 hobbs Exp $
+# RCS: @(#) $Id: panedwindow.tcl,v 1.8 2003/07/28 21:31:06 patthoyts Exp $
 #
 
 bind Panedwindow <Button-1> { ::tk::panedwindow::MarkSash %W %x %y 1 }
@@ -35,6 +35,7 @@ namespace eval ::tk::panedwindow {}
 #   None
 #
 proc ::tk::panedwindow::MarkSash {w x y proxy} {
+    if {[$w cget -opaqueresize]} { set proxy 0 }
     set what [$w identify $x $y]
     if { [llength $what] == 2 } {
 	foreach {index which} $what break
@@ -61,6 +62,7 @@ proc ::tk::panedwindow::MarkSash {w x y proxy} {
 #   Moves sash
 #
 proc ::tk::panedwindow::DragSash {w x y proxy} {
+    if {[$w cget -opaqueresize]} { set proxy 0 }
     if { [info exists ::tk::Priv(sash)] } {
 	if {$proxy} {
 	    $w proxy place \
@@ -83,6 +85,7 @@ proc ::tk::panedwindow::DragSash {w x y proxy} {
 #   Returns ...
 #
 proc ::tk::panedwindow::ReleaseSash {w proxy} {
+    if {[$w cget -opaqueresize]} { set proxy 0 }
     if { [info exists ::tk::Priv(sash)] } {
 	if {$proxy} {
 	    foreach {x y} [$w proxy coord] break
